@@ -4,7 +4,6 @@
 # with the expected Lexer dumps.
 
 use strict;
-use File::Spec::Functions ':ALL';
 BEGIN {
 	$| = 1;
 	$PPI::XS_DISABLE = 1;
@@ -20,8 +19,14 @@ use PPI::Dumper;
 #####################################################################
 # Prepare
 
-use Test::More tests => (2 + 15 * 12);
+use Test::More tests => (3 + 15 * 12);
+use Test::NoWarnings;
+use File::Spec::Functions ':ALL';
 use t::lib::PPI;
+
+
+
+
 
 #####################################################################
 # Code/Dump Testing
