@@ -4,14 +4,17 @@
 # (only very basic at this point)
 
 use strict;
-use File::Spec::Functions ':ALL';
 BEGIN {
 	$| = 1;
 	$PPI::XS_DISABLE = 1;
 	$PPI::XS_DISABLE = 1; # Prevent warning
 }
+
+use Test::More tests => 14;
+use Test::NoWarnings;
+use File::Spec::Functions ':ALL';
 use PPI;
-use Test::More tests => 13;
+
 
 
 
