@@ -3,17 +3,18 @@
 # Test the various PPI::Statement packages
 
 use strict;
-use File::Spec::Functions ':ALL';
 BEGIN {
 	$| = 1;
 	$PPI::XS_DISABLE = 1;
 	$PPI::XS_DISABLE = 1; # Prevent warning
 }
-use PPI::Lexer ();
 
 # Execute the tests
-use Test::More tests => 11;
+use Test::More tests => 12;
+use Test::NoWarnings;
+use File::Spec::Functions ':ALL';
 use Scalar::Util 'refaddr';
+use PPI::Lexer ();
 
 
 
