@@ -6,7 +6,9 @@ BEGIN {
 	$PPI::XS_DISABLE = 1;
 	$PPI::XS_DISABLE = 1; # Prevent warning
 }
-use Test::More 0.86 tests => 16;
+
+use Test::More 0.86 tests => 17;
+use Test::NoWarnings;
 use File::Spec::Functions ':ALL';
 use PPI;
 
